2023-09-09: Ver. 0.5-0
  * Alter system environment variables "TMPDIR" to where R tempdir() is
    such as "Rtmp..." since newer OpenMPI dumps some temporary directories and
    files to "TMPDIR" (or "-mca orte_tmpdir_base") when it runs.

2023-09-03: Ver. 0.5-0
  * Remove meta data from man.
  * Put vignette pdf back.
  * Modify CITATION.

2023-08-31: Ver. 0.5-0
  * Managed RNG streams now use comm.set.seed() and comm.set.stream() for 
    resource-independent (rank and core) guaranteed reproducibility
  * Added capability in comm.chunk() can set up managed RNG streams
  * Unmanaged RNG now defaults to R/base: likely different streams but not
    guaranteed
  * Imports L'Ecuyer-CMRG from `parallel` package instead of `rlecuyer`
  * demo/seed.r replaced with demo/seed_rank.r and demo/seed_vec.r
  * Various documentation updates

2022-11-20: Ver. 0.4-7
  * Some doc and minor code changes.

2022-08-06: Ver. 0.4-6
  * comm.chunk() function added for more data chunking options.
  * Replace class() with inherits() for "try-error".
  * Modify "appveyor.yml".
  * Fix "strict-prototype" warnings.

2022-03-10: Ver. 0.4-6
  * Fixed "info" interaction with slurm functions on some HPC systems.
  * Rename global variables by adding "global_spmd_" to variables that
    may be potentially affected.

2022-03-07: Ver. 0.4-5
  * Initialize/free some fake info and avoid MPI_INFO_NULL.

2021-11-05: Ver. 0.4-4
  * Update autoconf to 2.71.

2020-01-26: Ver. 0.4-3
  * Change "execmpi()" to finalize current mpi first.

2019-12-01: Ver. 0.4-2
  * Fix multiple definition warnings due to "-fno-common" as default in gcc-10.

2019-11-21: Ver. 0.4-1
  * Remove "00LOCK-pbdMPI/00new/" from Makeconf generated by Makevars.win for
    64bit MS-MPI library only.

2019-11-17: Ver. 0.4-0
  * Fix `isend()` by adding `spmd.check.type.send()` which is needed
    by `recv()` for handshaking.

2019-05-07: Ver. 0.4-0
  * Fix check type for send/recv long vectors.

2019-04-07: Ver. 0.4-0